# qibolab-qm

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst
tests/: test_foo.py
