[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qibolab-qm"
version = "0.0.1"
description = "Quantum hardware module and drivers for Qibo"
authors = ["The Qibo team"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://qibo.science/"
repository = "https://github.com/qiboteam/qibolab-qm/"
documentation = "https://qibo.science/docs/qibolab-qm/stable"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
packages = [{ include = "qibolab-qm", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qibolab = "^0.2.6"
qm-qua = "==1.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ipython = "^8.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
furo = "^2023.3.27"
recommonmark = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-markdown-tables = "^0.0.17"
nbsphinx = "^0.9.1"
ipython = "^8.12.0"
sphinx-copybutton = "^0.5.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.2"
pytest-cov = "^4.0.0"
pytest-env = ">=0.8.1"
pytest-mock = ">=3.10.0"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
ruff = "^0.9.1"

[tool.poe.tasks]
test = "pytest"
lint = "ruff check"
lint-warnings = """
  ruff check --exit-zero \
  --select F,E,W,C90,N,UP,BLE,FBT,B,A,C4,T10,EM,EXE,ISC,ICN,LOG,G,INP,PIE,T20,PT,Q,RSE,\
           RET,SLF,SLOT,SIM,TC,INT,ARG,PTH,ERA,NPY,PERF,RUF
"""
types = "true"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"

[tool.pytest.ini_options]
testpaths = ['tests/']
markers = ["qpu: mark tests that require qpu"]
addopts = [
  '--cov=qibolab-qm',
  '--cov-report=xml',
  '--cov-report=html',
  '-m not qpu',
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.pycln]
all = true
exclude = "__init__.py"
